--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   </section>
 
   <section id="subscribe">
-    <div class="container d-flex justify-content-center align-items-center orange-bg subscribe">
+    <div class="container d-flex justify-content-center align-items-center orange-bg">
       <div>
         <h3>LET'S STAY IN TOUCH</h3>
         <h6>Get updates on sales</h6>
@@ -256,7 +256,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>© 2020.E-School.All rights reseverd</p>
+        <p class="footer-copy">© 2020 eschool.All rights reseverd</p>
       </div>
     </div>
   </footer>
